@@ -1,3 +1,10 @@
+2008-07-30  Gautier Portet  <kassoulet gmail com>
+
+	* src/soundconverter.py: Add AAC encoding support as it seems to be
+	  fixed in gstreamer.
+	  (thanks Ian) 
+	  (fix #001653)
+
 2008-07-29  Gautier Portet  <kassoulet gmail com>
 
 	* src/soundconverter.py: use giosrc when available.
